# hermes

./: CMakeLists.txt  spkg-install
hermes1d/: CMakeLists.txt
hermes1d/examples/: CMakeLists.txt
hermes1d/examples/schroedinger/: CMakeLists.txt  data.py  data2.hdf5  plot.py  schroedinger.py  states.py
hermes1d/hermes1d/h1d_wrapper/: h1d_wrapper.cpp  h1d_wrapper.pyx  hermes1d.pxd
hermes2d/examples/: CMakeLists.txt
hermes2d/examples/gamm-channel/: CMakeLists.txt  forms.cpp  forms.h  main.cpp
hermes2d/src/: CMakeLists.txt  hermes2d.h  solver_nox.cpp  solver_nox.h
hermes2d/tests/rcp/: CMakeLists.txt  allocation.cpp
hermes_common/: CMakeCommon.txt
hermes_common/cmake/: FindCython.cmake  FindTRILINOS.cmake  FindUMFPACK.cmake  UseCython.cmake
